# MystEcs

./: .gitignore  README.md  meson.build  meson_options.txt
include/: component.h  component_flag.h  ecs.h  ecs_array.h  ecs_common.h  ecs_component.h  ecs_component_flag.h  ecs_entity_set.h  ecs_event.h  ecs_int_dispenser.h  ecs_messages.h  ecs_recorder.h  ecs_system.h  ecs_world.h  entity.h  entity_set.h  int_dispenser.h
src/: component.c  component_flag.c  ecs.c  ecs_component.c  ecs_entity_set.c  ecs_event.c  ecs_init.h  ecs_messages.c  ecs_recorder.c  ecs_system.c  ecs_world.c  entity_set.c  meson.build
test/: ecs_component_test.c  ecs_dispenser_test.c  ecs_entity_set_test.c  ecs_system_test.c  ecs_world_test.c  meson.build
