lib_sources = files([ 'component.c', 
                      'component_flag.c',
                      'ecs.c',
                      'ecs_event.c', 
                      'ecs_messages.c', 
                      'ecs_system.c', 
                      'ecs_world.c',
                      'entity_set.c'
                    ])