lib_sources = files([ 'ecs_component.c', 
                      'ecs_component_flag.c',
                      'ecs.c',
                      'ecs_event.c', 
                      'ecs_messages.c', 
                      'ecs_system.c', 
                      'ecs_world.c',
                      'ecs_entity_set.c'
                    ])